# PVTool

./: .gitignore  LICENSE  README.md
PVEnergy/projects/: .gitignore
PVEnergy/src/: PCM_Material.cpp  PCM_Material.h  PVTool_Energy.cpp  PVTool_Energy.h  main.cpp
PVTool/projects/cmake_local/: CMakeLists.txt
PVTool/resources/: PVTool.qrc  PVTool.rc
PVTool/src/: MainWindow.cpp  MainWindow.h  PCM_Material.cpp  PCM_Material.h  PVTAboutDialog.cpp  PVTAboutDialog.h  PVTAboutDialog.ui  PVTButtonBar.cpp  PVTButtonBar.h  PVTConstants.cpp  PVTConstants.h  PVTDebugApplication.cpp  PVTDebugApplication.h  PVTDirectories.cpp  PVTDirectories.h  PVTLicenceDialog.cpp  PVTLicenceDialog.h  PVTLicenceDialog.ui  PVTPartner.cpp  PVTPartner.h  PVTPartner.ui  PVTPostProcDialog.cpp  PVTPostProcDialog.h  PVTPostProcDialog.ui  PVTResultDialog.cpp  PVTResultDialog.h  PVTResultDialog.ui  PVTResultWidget.cpp  PVTResultWidget.h  PVTResultWidget.ui  PVT_DebugApplication.cpp  PVToolWidget.cpp  PVToolWidget.h  PVToolWidget.ui  main.cpp
data/: .gitignore  LoadProfile.tsv  readme.md
data/DB_Climate/: 01_Bremerhaven.c6b  02_Rostock_Warnemuende.c6b  03_Hamburg-Fuhlsbuettel.c6b  04_Potsdam.c6b  04_Potsdam_Sommer.c6b  04_Potsdam_Winter.c6b  05_Essen.c6b  06_BadMarienberg_withoutRain.c6b  06_Bad_Marienberg_withoutRain.c6b  07_Kassel.c6b  08_Braunlage.c6b  09_Chemnitz.c6b  10_Hof.c6b  11_Fichtelberg.c6b  12_Mannheim.c6b  13_Muehldorf-Inn.c6b  14_Stoetten.c6b  15_Garmisch_withoutRain.c6b  DE-01-TRY-2010__Bremerhaven__Jahr_00000K0_00007m.c6b  DE-02-TRY-2010__Rostock-Warnemuende__Jahr_00000K0_00004m.c6b  DE-03-TRY-2010__Hamburg-Fuhlsbuettel__Jahr_00000K0_00013m.c6b  DE-05-TRY-2010__Essen__Jahr_00000K0_00152m.c6b  DE-07-TRY-2010__Kassel__Jahr_00000K0_00231m.c6b  DE-11-TRY-2010__Fichtelberg__Jahr_00000K0_01213m.c6b  DE-12-TRY-2010__Mannheim__Jahr_00000K0_00096m.c6b  DE-13-TRY-2010__Muehldorf-Inn__Jahr_00000K0_00409m.c6b  readme.txt  (+1 more)
data/file_templates/: SP26.m6  (+9 more)
doc/: Manual_PVTool.adoc  readMe.adoc
release/: instructions.md  readme.md  release_checklist.txt
(+45 files in other folders)
